# Demo

./: README.md  app.py  pyproject.toml  template.html
src/multimodal_demo/: __init__.py  application.py  graph.py  ontology.py  operations.py  optimization.py  pipeline.py  schema.py  simulation.py
tests/: test_core.py
