[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-resilience-demo"
version = "0.2.0"
description = "Interactive demo for multimodal infrastructure interdependency and resilience analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.36.0",
  "pandas>=2.0.0",
  "networkx>=3.0",
  "pydeck>=0.9.0",
  "plotly>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
